src/_base.scss
@use './stylesheets/mixin/breakpoints.scss' as bp;
@use './stylesheets/mixin/grids.scss' as grids;
@use './stylesheets/mixin/colours.scss' as colours;
@use './stylesheets/variables.scss' as variables;

@mixin transition-all {
    transition: all, .5s;
}

@mixin home-page-base(){
    @include grids.main-grid();
    section {
        scroll-snap-align: start;
        grid-column: 2/12;
    }
    #home-intro {
        align-content: center
    }
    h1 {
        @include transition-all();
        color: colours.$text-primary;
        font-family: 'mondwest';
        font-style: normal;
        font-weight: 400;
        line-height: normal;
        transform: rotate(-1deg);
        margin-block: 0;
        white-space: nowrap;
    }
    .home-intro__pills {
        display: flex;
    }
    #home-intro__slime {
        transform: rotate(6.954deg)  translateY(-.5rem);
        path {
            fill: colours.$text-primary;
        }
    }
    .home-intro__i-am {
        display: flex;
        flex-direction: row;
        gap: 1rem;
    }
    .home-intro__hello-group {
        max-width: 38rem;
        position: relative;
        z-index: -1;
        .placeholder {
            z-index: -1;
        }
        .home-intro__hello {
            position: absolute;
            z-index: 1;
            left: 0;
        }
        #home-intro__hello-tc {
            path {
                @for $i from 2 through 27 {
                    &:nth-of-type(#{$i}){
                        animation-delay: calc($i*.2s);
                    }
                }
                stroke-dasharray: 700;
                stroke-dashoffset: 700;
                animation: draw 3s linear forwards;
            }
        }
        #home-intro__hello-cn {
            path {
                @for $i from 2 through 10 {
                    &:nth-of-type(#{$i}){
                        animation-delay: calc($i*.6s);
                    }
                }
                stroke-dasharray: 700;
                stroke-dashoffset: 700;
                animation: draw 3s linear forwards;
            }
        }
        #home-intro__hello-jp {
            path {
                @for $i from 2 through 13 {
                    &:nth-of-type(#{$i}){
                        animation-delay: calc($i*.4s);
                    }
                }
                stroke-dasharray: 700;
                stroke-dashoffset: 700;
                animation: draw 3s linear forwards;
            }
        }
        #home-intro__hello-en {
            path {
                &:nth-of-type(2){
                    animation-delay: 4s;
                }
                &:nth-of-type(3){
                    animation-delay: 4.2s;
                }
                stroke-dasharray: 1500;
                stroke-dashoffset: 1500;
                animation: draw 4s linear forwards;
            }
        }
    }
    #home-intro__name-span {
        position: relative;
        &::after {
            background: colours.$seasalt;
            content: '';
            left: 0;
            background-blend-mode: multiply;
            mix-blend-mode: multiply;
            position: absolute;
            width: 100%;
            z-index: -1;
        }
    }

    #home-intro__paragraphs {
        max-width: 50ch;
    }

    #home-intro__image {
        @include transition-all();
        position: relative;
        max-width: 20rem;
        img {
            width: 100%;
        }
    }

    .home-deco-circle {
        width: 4.875rem;
        height: 4.875rem;
        background-color: colours.$rose;
        border-radius: 100%;
        position: absolute;
    }

    #home-tools, #home-design {
        display: grid;
        grid-template-columns: subgrid;
        row-gap: 2rem;
        align-content: center;
    }
    #home-design {
        h2 {
            rotate: -1deg;
        }
    }
    #home-tools {
        h2 {
            rotate: 1deg;
        }
        .tools {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            gap: 4rem;
        }
        h3 {
            font-size: 2.5rem;
            font-family: 'mondwest';
            margin: 0;
            font-weight: 400;
        }
        .tiles-container {
            display: flex;
            flex-direction: column;
            gap: 1rem;
        }
        .tile {
            box-sizing: border-box;
            display: flex;
            height: 4.75rem;
            min-width: fit-content;
            min-height: fit-content;
            border-radius: 1rem;
            gap: 1rem;
            white-space: nowrap;
            align-items: center;
            transition: all, .5s;
            p {
                margin: 0;
            }
        }
        .design {
            display: flex;
            flex-direction: column;
            gap: 2rem;
            .tile {
                background-color: colours.$bg-secondary;
            }
        }
        .code {
            display: flex;
            flex-direction: column;
            gap: 2rem;
            .tile {
                background-color: colours.$bg-primary;
                border: 1px dashed colours.$border-neutral;
                margin: -1px;
            }
        }
    }

    .squiggle {
        position: absolute;
        left: 0;
        &.home-design-squiggle {
            bottom: -2rem;
        }
        &.home-tools-squiggle {
            bottom: -.5rem;
        }
    }

    h2 {
        font-size: 4.5rem;
        font-family: 'mondwest';
        margin: 0;
        position: relative;
    }

    h2, aside, .cards {
        grid-column: 1/11;
    }

    aside {
        p {
            margin: 0;
        }
    }

    h2 {
        span {
            white-space: nowrap;
        }
    }

    @keyframes draw {
        to {
            stroke-dashoffset: 0;
        }
    }
}

